# Resume_analyzer_RAG

./: .env  .gitignore  main.py  pyproject.toml  test.ipynb
chroma_legal_db/: chroma.sqlite3
